@@ -1,3 +1,9 @@
+2008-02-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	PR libgcj/33085
+	* libtool.m4 (_LT_COMPILER_PIC) [ mingw, cygwin ] <GCJ>:
+	Do not use -DDLL_EXPORT.  Backport from upstream.
+
 2008-02-14  Nick Clifton  <nickc@redhat.com>
 
 	Import this patch from gcc:
